Ajout de la base de données et de la table User

--- a/GamingPlatform/Views/Labyrinth/Maze.cshtml
+++ b/GamingPlatform/Views/Labyrinth/Maze.cshtml
@@ -5,6 +5,7 @@
 <body>
     <div id="labyrinth">
         <!-- Les divs .cell seront générées par JavaScript -->
+        <a href="@Url.Action("GenerateMaze", "labyrinth")" class="btn btn-primary btn-lg">Voir les lobbys</a>
     </div>
     <script src="~/js/signalr/dist/browser/signalr.js"></script>
     <script src="~/js/labyrinth/labyrinth.js"></script>
