--- a/GamingPlatform/wwwroot/css/labyrinth/labyrinth.css
+++ b/GamingPlatform/wwwroot/css/labyrinth/labyrinth.css
@@ -1,7 +1,19 @@
-﻿#labyrinth {
+﻿body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    background-color: #f0f0f0; /* Facultatif : pour donner un fond clair */
+}
+#labyrinth {
     display: grid;
-    grid-template-columns: repeat(10, 30px); /* Ajustez en fonction des dimensions */
-    grid-gap: 2px;
+    grid-template-columns: repeat(10, 30px); /* Ajustez la taille des cellules */
+    grid-template-rows: repeat(10, 30px); /* Ajustez la taille des cellules */
+    gap: 1px;
+    border: 2px solid black;
+    background-color: white;
+    border-radius: 5px; /* Optionnel : ajouter des bords arrondis */
 }
 
 .cell {
