--- a/GamingPlatform/Views/Lobby/CreateFromGame.cshtml
+++ b/GamingPlatform/Views/Lobby/CreateFromGame.cshtml
@@ -13,17 +13,17 @@
 
     <div class="form-group">
         <label for="name">Nom du Lobby</label>
-        <input type="text" class="form-control" name="name" id="name" placeholder="Nom du Lobby" required />
+        <input type="text" class="form-control" name="name" id="name" placeholder="Nom du Lobby" required value="@ViewBag.GameName" />
     </div>
 
     <div class="form-group form-check">
-        <input type="checkbox" class="form-check-input" name="isPrivate" id="isPrivate" />
+            <input type="checkbox" class="form-check-input" name="isPrivate" id="isPrivate" value="true" @(ViewBag.IsPrivate ? "checked" : "") />
         <label class="form-check-label" for="isPrivate">Privé ?</label>
     </div>
 
     <div id="passwordField" class="form-group d-none">
         <label for="password">Mot de passe (si privé)</label>
-        <input type="password" class="form-control" name="password" id="password" placeholder="Mot de passe" />
+        <input type="password" class="form-control" name="password" id="password" placeholder="Mot de passe" value="@ViewBag.Password" />
     </div>
 
     <button type="submit" class="btn btn-primary mt-3">Créer</button>
