--- a/GamingPlatform/Views/Lobby/CreateWithSelect.cshtml
+++ b/GamingPlatform/Views/Lobby/CreateWithSelect.cshtml
@@ -3,7 +3,7 @@
     <form id="createLobbyForm" asp-action="CreateWithSelect" method="post">
         <div class="form-group">
             <label for="lobbyName">Nom du lobby</label>
-            <input type="text" class="form-control" id="lobbyName" name="Name" placeholder="Nom du lobby" required>
+            <input type="text" class="form-control" id="lobbyName" name="Name" placeholder="Nom du lobby" value="@ViewBag.GameName" required>
         </div>
 
         <div class="form-group">
@@ -18,13 +18,14 @@
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="privateLobby" name="IsPrivate" value="true">
+            <input class="form-check-input" type="checkbox" id="privateLobby" name="IsPrivate"
+                   value="true" @(ViewBag.IsPrivate ? "checked" : "")>
             <label class="form-check-label" for="privateLobby">Créer un lobby privé</label>
         </div>
 
         <div id="passwordField" class="form-group d-none mt-3">
             <label for="lobbyPassword">Mot de passe</label>
-            <input type="password" class="form-control" id="lobbyPassword" name="Password" placeholder="Mot de passe">
+            <input type="password" class="form-control" id="lobbyPassword" name="Password" placeholder="Mot de passe" value="@ViewBag.Password">
         </div>
 
         <button type="submit" class="btn btn-primary mt-3">Créer</button>
