--- a/GamingPlatform/Views/PetitBac/Recapitulatif.cshtml
+++ b/GamingPlatform/Views/PetitBac/Recapitulatif.cshtml
@@ -32,23 +32,7 @@
                                     }
                                 </td>
                             </tr>
-                            <tr>
-                                <th scope="row">Condition d'Arrêt</th>
-                                <td>
-                                    @if (Model.EndCondition == "TimeLimit")
-                                    {
-                                        <span>Limite de Temps</span>
-                                        @if (Model.TimeLimit.HasValue)
-                                        {
-                                            <span> - @Model.TimeLimit minutes</span>
-                                        }
-                                    }
-                                    else if (Model.EndCondition == "AllPlayersDone")
-                                    {
-                                        <span>Lorsque tous les joueurs ont terminé</span>
-                                    }
-                                </td>
-                            </tr>
+                            
                             <tr>
                                 <th scope="row">Catégories Sélectionnées</th>
                                 <td>
@@ -93,35 +77,38 @@
 </table>
 
                 </div>
-
-                <div class="card-footer text-center">
-                    <a href="/PetitBac/Lobby?lobbyId=@Model.LobbyId" class="btn btn-success btn-lg px-4">Suivre l'évolution</a>
-                </div>
             </div>
         </div>
     </div>
 </div>
- <!-- Le modale  -->
-<div class="modal fade" id="modalCorrection" tabindex="-1" aria-labelledby="modalCorrectionLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="modalCorrectionLabel">Corriger les réponses de <span id="playerName"></span></h5>
-                <button type="button" class="btn-close" id="closeModalButton" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <form id="correctionForm">
+
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="modalCorrection" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="modalCorrectionLabel">Corriger les réponses de <span id="playerName"></span></h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form id="correctionForm">
                     <div id="answers-container">
                         <!-- Les réponses des joueurs seront chargées dynamiquement ici -->
                     </div>
                 </form>
-            </div>
-            <div class="modal-footer">
-                <button  type="button" class="btn btn-secondary" id="cancelButton">Fermer</button>
-                <button type="button" class="btn btn-primary" id="submitCorrection">Soumettre</button>
-            </div>
-        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal" id="cancelButton">Fermer</button>
+        <button type="button" class="btn btn-primary" id="submitCorrection">Soumettre</button>
+       
+      </div>
     </div>
+  </div>
 </div>
 
 <div id="game-info" data-game-id="@Model.Id" data-session-token="@ViewBag.SessionToken"></div>
