suppresion du headers et footer pour les pages de jeu

--- a/GamingPlatform/Views/PetitBac/Configuration.cshtml
+++ b/GamingPlatform/Views/PetitBac/Configuration.cshtml
@@ -1,3 +1,10 @@
+@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Page Sans Header et Footer";
+    ViewBag.HideHeader = true;
+    ViewBag.HideFooter = true;
+}
+
 <div class="container mt-5">
     <h1 class="mb-4 text-center">Configuration de la Partie : Petit Bac</h1>
 
