--- a/GamingPlatform/Views/PetitBac/Confirmation.cshtml
+++ b/GamingPlatform/Views/PetitBac/Confirmation.cshtml
@@ -1,4 +1,9 @@
-@model GamingPlatform.Models.ConfirmationViewModel
+@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Page Sans Header et Footer";
+    ViewBag.HideHeader = true;
+    ViewBag.HideFooter = true;
+}
 
 <div class="container mt-5">
     <div class="row justify-content-center">
