--- a/GamingPlatform/Views/PetitBac/Recapitulatif.cshtml
+++ b/GamingPlatform/Views/PetitBac/Recapitulatif.cshtml
@@ -1,3 +1,9 @@
+@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Page Sans Header et Footer";
+    ViewBag.HideHeader = true;
+    ViewBag.HideFooter = true;
+}
 @model GamingPlatform.Models.PetitBacGame
 
 <div class="container mt-5">
