--- a/GamingPlatform/Views/Lobby/Details.cshtml
+++ b/GamingPlatform/Views/Lobby/Details.cshtml
@@ -58,9 +58,7 @@
                 <h4>Inviter un joueur :</h4>
                 <p>Copiez et envoyez ce lien à vos amis pour les inviter dans ce lobby :</p>
                 <div class="input-group">
-                    <input type="text"
-                        class="form-control"
-                        id="inviteLink"
+                    <input type="text" class="form-control" id="inviteLink"
                         value="@Url.Action(Model.IsPrivate ? "JoinPrivateLobby" : "JoinPublicLobby", "Lobby", Model.IsPrivate ? new { id = Model.Id, password = Model.Password } : new { id = Model.Id }, "http")"
                         readonly />
                     <button class="btn btn-outline-secondary" type="button" onclick="copyInviteLink()">Copier</button>
@@ -75,14 +73,17 @@
                 }
                 else if (Model.Status == GamingPlatform.Models.LobbyStatus.InProgress)
                 {
-                    if(@Model.Game.Name== "SpeedTyping"){
+                    if (@Model.Game.Name == "SpeedTyping")
+                    {
                         <a href="/Game/@Model.Game.Name/Play/@Model.Id" class="btn btn-success">
-                        Rejoindre le plateau de jeu
-                    </a>
-                    }else{
-                         <a href="/Game/Play/@Model.Game.Code?lobbyId=@Model.Id" class="btn btn-success">
-                        Rejoindre le plateau de jeu
-                    </a>
+                            Rejoindre le plateau de jeu
+                        </a>
+                    }
+                    else
+                    {
+                        <a href="/Game/Play/@Model.Game.Code?lobbyId=@Model.Id" class="btn btn-success">
+                            Rejoindre le plateau de jeu
+                        </a>
                     }
                 }
                 else if (Model.Status == GamingPlatform.Models.LobbyStatus.Finished)
@@ -98,17 +99,22 @@
 @section Scripts {
     <script>
         function startGame(lobbyId) {
-            // Appeler une API pour changer le status à InProgress
             fetch(`/Lobby/Start/${lobbyId}`, { method: 'POST' })
-                .then(response => {
-                    if (response.ok) {
-                        alert('Le jeu a commencé. Redirection...');
-                        window.location.href = `/Game/Play/${lobbyId}`;
-                    } else {
-                        alert('Impossible de lancer le jeu. Réessayez plus tard.');
+                .then(response => response.json())
+                .then(data => {
+                    console.log('Réponse reçue:', data); // Ajoutez cette ligne
+                    alert(data.Message || 'Aucun message reçu');
+                    if (data.RedirectUrl) {
+                        window.location.href = data.RedirectUrl;
                     }
+                })
+                .catch(err => {
+                    console.error("Une erreur s'est produite : ", err);
+                    alert("Une erreur est survenue. Veuillez réessayer.");
                 });
         }
+
+
 
         function copyInviteLink() {
             var copyText = document.getElementById("inviteLink");
