--- a/GamingPlatform/Views/Labyrinth/Maze.cshtml
+++ b/GamingPlatform/Views/Labyrinth/Maze.cshtml
@@ -10,7 +10,12 @@
     <!-- Bouton Quitter -->
     <a href="/lobby" class="quit-button">Quitter le jeu</a>
 
-    <!-- Spinner de chargement -->
+    <!-- Affichage des noms des joueurs -->
+    <div id="playerNames" style="position: absolute; top: 10px; left: 10px; z-index: 100;">
+        <p style="margin: 0; color: blue; font-weight: bold;"> X : @ViewBag.player1</p>
+        <p style="margin: 0; color: red; font-weight: bold;"> O: @ViewBag.player2</p>
+    </div>
+
     <!-- Spinner de chargement -->
     <div id="loadingSpinner">
         <div class="spinner"></div>
@@ -55,7 +60,47 @@
                 console.error("Error fetching labyrinth:", err.toString());
                 // Optionnel : afficher un message d'erreur ou réessayer
             });
+        const player1 = "@ViewBag.player1";
+        const player2 = "@ViewBag.player2";
+        const currentplayer = "@ViewBag.currentplayer";
+        // Handles keyboard input
+        function keyboardHandler(event) {
+            if (!gameReady) return;
+            if (!gameRunning && (event.keyCode >= 37 && event.keyCode <= 40 || event.keyCode >= 65 && event.keyCode <= 87)) {
+                gameRunning = true;
+            }
 
+            // Handle player movement and send to server
+            if (event.keyCode >= 37 && event.keyCode <= 40) { // Arrow keys for Player 1
+                handlePlayerMovement(event.keyCode, player1Cell, UP, DOWN, LEFT, RIGHT, 1, (nextCell) => {
+                    if (player1 === currentplayer) {
+                        player1Cell = nextCell;
+                        connection.invoke("SendPlayerMovement", 1, nextCell);
+                    }
+                });
+            }
+            if (event.keyCode >= 37 && event.keyCode <= 40) { // Arrow keys for Player 2
+                handlePlayerMovement(event.keyCode, player2Cell, UP, DOWN, LEFT, RIGHT, 2, (nextCell) => {
+                    if (player2 === currentplayer) {
+                        player2Cell = nextCell;
+                        connection.invoke("SendPlayerMovement", 2, nextCell);
+                    }
+                });
+            }
+
+
+            // Check for win condition
+            if (player1Cell == destinationCell || player2Cell == destinationCell) {
+                endGame();
+                if (player1Cell == destinationCell) {
+                    connection.invoke("SendGameEnd", `${player1} a gagné la course !`);
+                } else {
+                    connection.invoke("SendGameEnd", `${player2} a gagné la course !`);
+                }
+            }
+
+            render();
+        }
     </script>
 	<script src="~/js/labyrinth/actions.js"></script>
 </body>
