--- a/GamingPlatform/wwwroot/css/labyrinth/labyrinth.css
+++ b/GamingPlatform/wwwroot/css/labyrinth/labyrinth.css
@@ -1,15 +1,11 @@
-﻿/* Style pour centrer le spinner */
+﻿/* Position et style pour le spinner */
 #loadingSpinner {
-    display: none;
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(255, 255, 255, 0.8);
+    bottom: 20px;
+    right: 20px;
     z-index: 1000;
-    display: flex;
-    justify-content: center;
+    display: none;
+    flex-direction: column;
     align-items: center;
 }
 
@@ -17,10 +13,15 @@
         border: 4px solid #f3f3f3;
         border-top: 4px solid #007bff;
         border-radius: 50%;
-        width: 50px;
-        height: 50px;
+        width: 40px;
+        height: 40px;
         animation: spin 1s linear infinite;
     }
+
+#spinnerMessage {
+    font-size: 14px;
+    margin-top: 5px;
+}
 
 @keyframes spin {
     0% {
